# faasten

./: Cargo.toml  default.nix  shell.nix
functions/fsutil/: workload.py
fuse-test/: Cargo.toml  filesystem.rs
fuse-test/mount/: Cargo.toml  build.rs
fuse-test/mount/src/: build.rs  filesystem.rs  main.rs  protobuf.txt  syscalls.proto
fuse-test/mount/src/protobuf/: messages.proto
snapfaas/: Cargo.toml
snapfaas/bins/singlevm/: main.rs
snapfaas/bins/storage-breakdown/: main.rs
snapfaas/src/fs/: mod.rs
