[package]
name = "mount"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.12"
clap = { version = "2.33", features = ["cargo"] }
libc = "0.2.51"
env_logger = "0.9"
pkg-config = "0.3"
vsock = "0.5.0"
protobuf = "3.5.0"
byteorder = "1.5.0"

[build-dependencies]
protobuf-codegen-pure = "2.24"


