[package]
name = "fuse-test"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14.0"
clap = { version = "4.5.8", features = ["cargo"] }
libc = "0.2.155"
env_logger = "0.11.3"
pkg-config = "0.3.30"
vsock = "0.5.0"
byteorder = "1.5.0"
prost = "0.13.1"
prost-types = "0.13.1"
bytes = "1.6.1"

[build-dependencies]
protobuf-codegen-pure = "2.24"
prost-build = "0.13.1"


